Support cursor flashtime setting of 0 (= no blinking)

The insert cursor and end-of-line cursor shapes need more work to tell
normal and shadow cursor apart from each other, left for later.

BUG: 336607

FIXED-IN: 0.26.5